# VulkanExample

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  shaders.cmake
CMake/: CMakeLists.txt  Compiler.cmake  ShaderGenerator.cpp  Shaders.cmake
Dependencies/: CMakeLists.txt  Tracy.cmake  imgui.cmake  vulkan.cmake
Engine/: CMakeLists.txt
Engine/Application/: Application.cpp  Application.h  Window.cpp  Window.h
Engine/Utils/: Aliases.h  Assert.cpp  Assert.h  Base.h  Constructors.h  Handles.cpp  Handles.h  ManualLifetime.h  Mapping.h  Profiler.h  Singleton.h
Engine/Vulkan/: BinarySemaphore.cpp  BinarySemaphore.h  BinarySemaphorePool.cpp  BinarySemaphorePool.h  Buffer.cpp  Buffer.h  CommandBuffer.cpp  CommandBuffer.h  CommandPool.cpp  CommandPool.h  Common.h  Config.cpp  Config.h  Debugger.cpp  Debugger.h  Device.cpp  Device.h  Fence.cpp  Fence.h  FencePool.cpp  FencePool.h  Forward.h  Helpers.cpp  Helpers.h  ImGuiWindow.cpp  Image.cpp  Image.h  ImageSampler.cpp  ImageSampler.h  ImageView.cpp  ImageView.h  Instance.cpp  Instance.h  Object.h  Queue.cpp  Queue.h  RawCommandBuffer.cpp  RawCommandBuffer.h  Renderer.cpp  Renderer.h  (+8 more)
Engine/Vulkan/Concrete/: CommandBuffer.cpp  CommandBuffer.h  Fence.cpp  Fence.h  Image.cpp  Image.h  ResizebleSwapChain.cpp  ResizebleSwapChain.h  Semaphore.cpp  Semaphore.h  SmartCommandBuffer.cpp  SmartCommandBuffer.h  SwapChain.cpp  SwapChain.h
Engine/Vulkan/Executor/: Executor.h  Task.h
Engine/Vulkan/Interface/: BinarySemaphore.h  CommandPool.h  Fence.h  Image.h  RawCommandBuffer.h  Semaphore.h  SwapChain.h  Task.h
Engine/Vulkan/Managed/: CommandBuffer.cpp  CommandBuffer.h  CommandPool.cpp  CommandPool.h  Fence.cpp  Fence.h  Image.cpp  Image.h  RawCommandBuffer.cpp  RawCommandBuffer.h  Semaphore.cpp  Semaphore.h
Engine/Vulkan/Objects/: Buffer.cpp  Buffer.h  CommandBuffer.cpp  CommandPool.cpp  Debugger.h  Device.cpp  Device.h  Image.cpp  ImageView.h  Instance.cpp  Instance.h  Object.h  Queue.cpp  Queue.h  Renderer.cpp  SwapChain.cpp  SwapChain.h
Engine/Vulkan/RenderGraph/: CommandBufferPassNode.cpp  CommandBufferPassNode.h  Entry.h  ExternalDependencyManager.cpp  ExternalDependencyManager.h  FrameGraph.cpp  FrameGraph.h  IPassNode.cpp  IPassNode.h  Node.cpp  Node.h  Pass.h  PassNode.cpp  PassNode.h  ProxyResourceNode.cpp  ProxyResourceNode.h  RenderGraph.cpp  RenderGraph.h  Resource.h  ResourceNode.cpp  ResourceNode.h  TaskBuilder.cpp  TaskBuilder.h
Engine/Vulkan/RenderGraph/FrameGraph/: FrameGraph.cpp  SwapChainAquirePassNode.cpp  SwapChainAquirePassNode.h  SwapChainImageNode.cpp  SwapChainImageNode.h  SwapChainNodesState.cpp  SwapChainNodesState.h  SwapChainPresentPassNode.cpp  SwapChainPresentPassNode.h
Engine/Vulkan/RenderGraph/Interface/: DependencyType.h  DynamicType.h  Entry.h  ImageResourceNode.h  Node.h  Pass.h  PassCluster.h  PassEntry.h  PassFactory.h  PassNode.h  ProxyResourceNode.h  ResourceNode.h  StaticResourceNode.h
Engine/Vulkan/Renderer/: Config.cpp  Config.h  Debugger.cpp  Debugger.h  Device.cpp  Device.h  Executor.cpp  Executor.h  GraphicsQueue.cpp  GraphicsQueue.h  PresentationQueue.cpp  PresentationQueue.h  Queue.cpp  Queue.h  Renderer.cpp  Renderer.h  SemaphorePool.cpp  SemaphorePool.h  Task.h  Window.cpp  Window.h
Engine/Vulkan/Sync/: State.h
Engine/Vulkan/Synchronization/: AccessScope.cpp  AccessScope.h  ImageGlobalState.h  ImageState.cpp  ImageState.h  ImageTracker.cpp  ImageTracker.h  State.cpp  State.h  Tracker.cpp  Tracker.h
Engine/Vulkan/Window/: Surface.cpp  Surface.h  SwapChain.cpp  SwapChain.h  Window.cpp  Window.h
Engine/Vulkan/Window/FrameGraph/: FrameGraph.cpp  FrameGraph.h  SwapChainPresentPassNode.cpp  SwapChainPresentPassNode.h
Examples/: CMakeLists.txt  main.cpp
Vulkan/: Application.cpp  Application.h  Assert.cpp  Assert.h  Base.h  Buffer.cpp  Buffer.h  CMakeLists.txt  CommandBuffer.cpp  CommandBuffer.h  CommandPool.cpp  CommandPool.h  Common.h  Config.cpp  Config.h  Debugger.cpp  Debugger.h  Device.cpp  Device.h  Helpers.cpp  Helpers.h  Image.cpp  Image.h  ImageSampler.cpp  ImageSampler.h  ImageView.cpp  ImageView.h  Instance.cpp  Instance.h  Object.h  ObjectHolder.cpp  ObjectHolder.h  Pipeline.cpp  Pipeline.h  Queue.cpp  Queue.h  Renderer.cpp  Renderer.h  ShaderModule.cpp  ShaderModule.h  (+6 more)
Vulkan/ImGui/: Context.cpp  Context.h  Window.cpp  Window.h
Vulkan/Utils/: Singleton.h
VulkanExample/: CMakeLists.txt  main.cpp
